# query-crafter

./: .gitignore  .gitmodules  .rustfmt.toml  CLAUDE.md  CURSOR_IMPROVEMENTS.md  Cargo.toml  FINAL_PREVIEW_SCROLL_FIX.md  FIX_CLI_CONNECTION.md  FIX_TUNNEL_CONNECTION.md  INCREMENTAL_BUILD_FIX.md  LICENSE  PREVIEW_DEBUG_INSTRUCTIONS.md  PREVIEW_MODE_FIX.md  PREVIEW_NAVIGATION_FIXED.md  PREVIEW_SCROLLING_FIXED.md  PREVIEW_TABLE_MODE.md  PREVIEW_VERTICAL_TABLE.md  README.md  ROW_PREVIEW_FIXES.md  SELECTIONMODE_FIX.md  SELECTIONMODE_FIX_SUMMARY.md  SELECTION_MODE_FIXES.md  TUNNEL_FEATURE.md  build.rs  config.toml  debug_preview_navigation.md  fix_theme_imports.sh  flake.nix  install.sh  package.json  remove_theme_module.sh  rust-toolchain.toml  test_db_rebuild.sh  test_final_incremental.sh  test_incremental_build.sh  test_incremental_db.sh  test_rebuild.sh  test_selection_modes.md  todo.org  wrapper.h  (+1 more)
.cargo/: config.toml
.config/: config.json5
.github/workflows/: cd.yml  manual-release.yml
docs/: EXPLAIN_FUNCTIONALITY.md  INSTALL.md  LSP_SETUP.md  SELECTIONMODE_NAVIGATION.md
examples/: config_with_lsp.toml  editor_demo.rs
lsp-patches/: SettingStore.js.patch  complete.js.patch  initializeLogging.js.patch
nix/: query-crafter.nix  shell.nix
query-crafter-theme/: Cargo.toml
query-crafter-theme/src/: lib.rs
scripts/: patch-sql-lsp.sh  verify-installation.sh
src/: action.rs  app.rs  autocomplete.rs  autocomplete_engine.rs  autocomplete_widget.rs  cli.rs  components.rs  config.rs  editor_common.rs  editor_component.rs  lib.rs  lsp_patches.rs  main.rs  mode.rs  patch_lsp.rs  sql.rs  theme.rs  tunnel.rs  utils.rs
src/components/: custom_vim_editor.rs  db.rs  fps.rs  home.rs  mod.rs  vim.rs  zep_editor.rs
src/components/db/: README.md  editor.rs  handlers.rs  helpers.rs  mod.rs  models.rs  rendering.rs  state.rs
src/lsp/: channel.rs  client.rs  config.rs  mod.rs  provider.rs  service.rs  stream_filter.rs
tests/: README.md  lib.rs  test_table_info.rs  zep_editor_tests.rs
tests/e2e/: mod.rs  workflows.rs
tests/integration/: database.rs  event_flow.rs  mod.rs  navigation.rs  vim_mode.rs
tests/test_utils/: assertions.rs  builders.rs  component.rs  fixtures.rs  mod.rs  terminal.rs
tests/unit/: actions.rs  mod.rs
tests/unit/components/: db_test.rs  mod.rs  vim_test.rs
tests/visual/: components.rs  mod.rs  snapshots.rs
tests/visual/snapshots/: lib__visual__components__error_popup_rendering.snap  lib__visual__components__help_content_rendering.snap  lib__visual__components__layout_splits.snap  lib__visual__components__results_table_rendering.snap  lib__visual__components__table_list_rendering.snap  lib__visual__components__vim_editor_insert_mode.snap  lib__visual__components__vim_editor_normal_mode.snap  lib__visual__components__vim_editor_visual_mode.snap  lib__visual__snapshots__error_message_display.snap  lib__visual__snapshots__help_popup.snap  lib__visual__snapshots__home_focused.snap  lib__visual__snapshots__initial_layout.snap  lib__visual__snapshots__long_results_scrolling.snap  lib__visual__snapshots__query_editor_with_content.snap  lib__visual__snapshots__query_focused.snap  lib__visual__snapshots__query_results_view.snap  lib__visual__snapshots__results_focused.snap  lib__visual__snapshots__table_columns_popup.snap  lib__visual__snapshots__tables_loaded_view.snap
