[workspace]
members = [".", "query-crafter-theme"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies to ensure consistent versions

[package]
name = "query-crafter"
version = "0.1.0"
edition = "2021"
description = "TUI for interacting with a database"
repository = "https://github.com/JonnyWalker81/query-crafter"
authors = ["Jonathan Rothberg <jon@join.build>"]

# Split the crate into a lib and bin to improve compilation caching
[[bin]]
name = "query-crafter"
path = "src/main.rs"

[[bin]]
name = "sql-lsp-wrapper"
path = "src/bin/sql-lsp-wrapper.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.6.0"
async-trait = "0.1.88"
better-panic = "0.3.0"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
clipboard = "0.5.0"
color-eyre = "0.6.5"
config = "0.13.4"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.31"
human-panic = "2.0.2"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.174"
log = "0.4.22"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
rpassword = "7.4.0"
dialoguer = "0.11.0"
# ratatui-textarea = {git = "https://github.com/JonnyWalker81/ratatui-textarea.git"}
rust_decimal = "1.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.134"
signal-hook = "0.3.18"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "chrono", "json", "rust_decimal", "uuid", "postgres", "sqlite"] }
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full", "time"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["compat"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
tui-textarea = "0.7.0"
ropey = "1.6.1"
nucleo = "0.5.0"
once_cell = "1.20.2"
query-crafter-theme = { path = "query-crafter-theme" }
async-lsp = { version = "0.2.2", features = ["forward"] }
lsp-types = "0.95.1"
sqlformat = "0.2"

# AWS SDK dependencies removed - using AWS CLI instead for faster compilation


[dev-dependencies]
insta = { version = "1.34", features = ["yaml", "redactions"] }
mockall = "0.12"
tempfile = "3.8"
serial_test = "3.0"
rstest = "0.18"

[build-dependencies]

[features]
default = ["tui-textarea-editor"]
tui-textarea-editor = []

# Optimize compile times for dev builds
[profile.dev]
# Use the config in .cargo/config.toml

[profile.release]
# Use the config in .cargo/config.toml
